# AED

./: CMakeLists.txt  README.md
AED_Guiao_01/: hello_X.c  out.txt  simplest_1.c  tabela.c  tabela2.c
AED_Guiao_02/: ex04  ex04.c  ex05.c
AED_Guiao_03/: ex03  ex03.c  ex04  ex04.c  functions_iterations_count  functions_iterations_count.c  functions_timing  functions_timing.c  output_functions_timing_1.txt  output_functions_timing_2.txt  output_functions_timing_3.txt
AED_Guiao_04/: ex01  ex01.c  ex02  ex02.c  ex03  ex03.c
AED_Guiao_05/: ex01.c
AED_Guiao_06/: Delannoy  ex01_1.c  ex01_2  ex01_2.c  ex01_3  ex01_3.c  ex02.c
AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/01_STACK_and_QUEUE_example/: 01_example.c
AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/02_DATE_and_PERSON/: Date.c  Person.c  Tests
AED_Guiao_08/Guiao_08_Ficheiros_para_os_estudantes/: PersonSet.c  Tests
AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/: SortedList.c  SortedListTest1  SortedListTest2  Tests  tst-12.txt
AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/: MinHeap.c  MinHeapTest
AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/: Graph.c  GraphDFSRec.c  GraphDFSWithStack.c  example1  example2  example3
AED_Guiao_13/Guiao_13_Ficheiros_para_os_Estudantes/: Circle.cpp  CircleTest  FiguresTest  PointTest  Rectangle.cpp  RectangleTest  Square.cpp  SquareTest
AED_Project1_ImageProcessing/: blur.pgm
AED_Project1_ImageProcessingf/: imageTest  imageTool
AED_Project2_Graphs/: Graph.h  GraphTopologicalSorting.c  IntegersQueue.c  SortedList.h
AED_Project2_Graphs/GRAFOS_ORIENTADOS/: DAG_5.txt  DAG_6.txt
AED_Project2_Graphsf/: Graph.c  GraphTopologicalSorting.h  IntegersQueue.h  Makefile  SortedList.c  example1.c  example2.c  example3.c
