cmake_minimum_required(VERSION 3.26)
project(AED C)

set(CMAKE_C_STANDARD 11)

add_executable(AED
        AED_Guiao_06/ex01_1.c
        AED_Guiao_06/ex01_2.c
        AED_Guiao_06/ex01_3.c
        AED_Guiao_06/ex01_2.c
        AED_Guiao_06/ex01_2.c
        AED_Guiao_05/ex01.c
        AED_Guiao_06/ex02.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/01_STACK_and_QUEUE_example/01_example.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/01_STACK_and_QUEUE_example/IntegersQueue.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/01_STACK_and_QUEUE_example/IntegersStack.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/02_DATE_and_PERSON/Date.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/02_DATE_and_PERSON/Person.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/02_DATE_and_PERSON/Tests.c)
