cmake_minimum_required(VERSION 3.26)
project(AED C)

set(CMAKE_C_STANDARD 11)

add_executable(AED
        AED_Guiao_06/ex01_1.c
        AED_Guiao_06/ex01_2.c
        AED_Guiao_06/ex01_3.c
        AED_Guiao_06/ex01_2.c
        AED_Guiao_06/ex01_2.c
        AED_Guiao_05/ex01.c
        AED_Guiao_06/ex02.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/01_STACK_and_QUEUE_example/01_example.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/01_STACK_and_QUEUE_example/IntegersQueue.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/01_STACK_and_QUEUE_example/IntegersStack.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/02_DATE_and_PERSON/Date.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/02_DATE_and_PERSON/Person.c
        AED_Guiao_07/Guiao_07_Ficheiros_para_os_Estudantes/02_DATE_and_PERSON/Tests.c
        AED_Guiao_08/Guiao_08_Ficheiros_para_os_estudantes/Person.c
        AED_Guiao_08/Guiao_08_Ficheiros_para_os_estudantes/Date.c
        AED_Guiao_08/Guiao_08_Ficheiros_para_os_estudantes/PersonSet.c
        AED_Guiao_08/Guiao_08_Ficheiros_para_os_estudantes/Tests.c
        AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/Date.c
        AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/Person.c
        AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/PersonSet.c
        AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/SortedList.c
        AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/SortedListTest1.c
        AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/SortedListTest2.c
        AED_Guiao_09/Guiao_09_Ficheiros_para_os_Estudantes/Tests.c
        AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/FileMerge.c
        AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/FileReader.c
        AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/HashTable.c
        AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/KLongestWords.c
        AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/MinHeap.c
        AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/MinHeapTest.c
        AED_Guiao_11/Guiao_11_Ficheiros_para_os_Estudantes/TopKValues.c
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/example1.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/example2.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/example3.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/Graph.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/GraphBFSWithQueue.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/GraphDFSRec.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/GraphDFSWithStack.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/IntegersQueue.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/IntegersStack.c"
        "AED_Guiao_12/Guiao_12_Ficheiros_para_os Estudantes/SortedList.c"
        AED_Guiao_13/Guiao_13_Ficheiros_para_os_Estudantes/PointTest.cpp
        AED_Guiao_13/Guiao_13_Ficheiros_para_os_Estudantes/Point.cpp)
